--- a/index.html
+++ b/index.html
@@ -13,40 +13,67 @@
       }
 
       function playRound(playerSelection, computerSelection) {
+        playerSelection = playerSelection.toLowerCase();
         // All possible outcomes if user chose Rock
-        if (playerSelection == "Rock") {
-          if (computerSelection == "Scissors") {
+        if (playerSelection == "rock")
+        {
+          if (computerSelection == "Scissors")
+          {
             win++;
-            return ("You win! " + playerSelection + " beats " + computerSelection);
+            return ("You win! " + "Rock  beats " + computerSelection);
           }
           else if (computerSelection == "Paper")
-            return ("You lose! " + computerSelection + " beats " + playerSelection);
+          {
+            lose++;
+            return ("You lose! " + computerSelection + " beats Rock");
+          }
           else if (computerSelection == "Rock")
+          {
+            tie++;
             return ("Tied!");
+          }
         }
         // Repeat for all three player choices
-        if (playerSelection == "Scissors") {
-          if (computerSelection == "Scissors") {
+        else if (playerSelection == "scissors")
+        {
+          if (computerSelection == "Scissors")
+          {
             tie++;
             return ("Tied!");
           }
           else if (computerSelection == "Paper")
-            return ("You win!" + playerSelection + " beats " + computerSelection);
+          {
+            win++;
+            return ("You win!" + " Scissors beats " + computerSelection);
+          }
           else if (computerSelection == "Rock")
-            return ("You lose! " + computerSelection + " beats " + playerSelection);
+          {
+            lose++;
+            return ("You lose! " + computerSelection + " beats Scissors");
+          }
         }
-      if (playerSelection == "Paper") {
-        if (computerSelection == "Scissors")
-          return ("You lose! " + computerSelection + " beats " + playerSelection);
-        else if (computerSelection == "Paper")
-          return ("Tied!");
-        else if (computerSelection == "Rock")
-          return ("You win! " + playerSelection + " beats " + computerSelection);
+        else if (playerSelection == "paper")
+        {
+          if (computerSelection == "Scissors")
+          {
+            lose++;
+            return ("You lose! " + computerSelection + " beats Paper");
+          }
+          else if (computerSelection == "Paper")
+          {
+            tie++;
+            return ("Tied!");
+          }
+          else if (computerSelection == "Rock")
+          {
+            win++;
+            return ("You win! " + "Paper beats " + computerSelection);
+          }
         }
       }
 
       function game() {
-        const playerSelection = prompt("Let's play Rock, Paper, Scissors! Enter your choice:");
+        var playerSelection = prompt("Let's play Rock, Paper, Scissors! Enter your choice:");
         const computerSelection = computerPlay();
         console.log("You chose " + playerSelection);
         console.log(playRound(playerSelection, computerSelection));
@@ -57,7 +84,15 @@
       for (let i = 0; i < 5; i++) {
         game();
       };
-      console.log("You won " + win + " times.");
+      console.log("Your score: " + win);
+      console.log("Computer score: " + lose);
+      if (win > lose)
+        console.log("You won the match!");
+      else if (lose > win)
+        console.log("CPU won the match!");
+      else {
+        console.log("That match is a tie!");
+      }
     </script>
   </body>
 </html>
